# mcp-agent-rs

./: .gitignore  README.md
.github/workflows/: publish-docs.yml  rust-ci.yml
assets/terminal-web/: index.html
examples/: simple_vis.rs  simple_visualization.rs  simple_workflow_runner.rs
examples/conditional_workflow/: main.rs
examples/retry_workflow/: main.rs
examples/simple_mcp_example/: README.md  server_manager_example.rs  simple_client.rs  simple_mcp_example.md  simple_server_manager.rs
rust/: Cargo.toml  Cargo.toml.bak  README-TELEMETRY.md  README-TERMINAL.md  README.md  justfile  run_graph_vis.sh  run_terminal_tests.sh  run_tests.sh  run_vis.sh
rust/benches/: batch_requests.rs
rust/doc/source/: requirements.rst
rust/docs/: README.md  generate_diagrams.sh  next_steps.md  transport_implementation.md  visualization_fixes.md  visualization_issues.md  visualization_readme.md
rust/docs/source/: architecture.rst  changelog.md  conf.py  graph_visualization.rst  index.rst  requirements.rst
rust/docs/source/_static/: component_diagram.puml  module_dependencies.puml  resources_system.puml  tools_system.puml
rust/examples/: README_graph_vis.md  README_graph_visualization.md  basic_workflow.rs  config_example.rs  dependency_workflow.rs  graph_output_example.rs  graph_vis.rs  graph_visualization.rs  mcp_basic_protocol_example.rs  mcp_prompts_example.rs  mcp_resources_example.rs  minimal_vis.rs  simple_graph.rs  simple_visualization.rs  simple_workflow_runner.rs  visualization_demo.html  visualization_screenshot.md  visualize_workflow.rs  workflow_visualizer.rs
rust/examples/conditional_workflow/: main.rs
rust/examples/dual_terminal/: main.rs
rust/examples/event_driven_workflow/: main.rs
rust/examples/fan_out_fan_in_workflow/: main.rs
rust/examples/graph-visualization/: Cargo.toml
rust/examples/graph-visualization/src/: main.rs
rust/examples/graph_vis_example/: Cargo.toml
rust/examples/graph_vis_example/src/: main.rs
rust/examples/human_input_example/: main.rs
rust/examples/jsonrpc_example/: main.rs
rust/examples/orchestrator_workflow/: main.rs
rust/examples/parallel_workflow/: main.rs
rust/examples/pipeline_workflow/: main.rs
rust/examples/retry_workflow/: main.rs
rust/examples/router_workflow/: main.rs
rust/examples/saga_workflow/: main.rs
rust/examples/state_machine_workflow/: main.rs
rust/src/: error.rs  lib.rs
rust/src/config/: mod.rs
rust/src/human_input/: handler.rs  mod.rs  types.rs
rust/src/llm/: mod.rs  ollama.rs  types.rs
rust/src/mcp/: agent.rs  auth.rs  connection.rs  error.rs  executor.rs  jsonrpc.rs  jsonrpc.rs.bak  lifecycle.rs  mod.rs  protocol.rs  schema.rs  server_manager.rs  server_registry.rs  types.rs
rust/src/mcp/prompts/: interactive.rs  manager.rs  mod.rs  template.rs  types.rs
rust/src/mcp/resources/: error.rs  handler.rs  mod.rs  models.rs  provider.rs  templates.rs  utils.rs
rust/src/mcp/tools/: handler.rs  mod.rs  models.rs  provider.rs  tests.rs
rust/src/mcp/transport/: http.rs  mod.rs  server.rs  websocket.rs
rust/src/telemetry/: alerts.rs  mod.rs
rust/src/terminal/: config.rs  console.rs  initialize.rs  mod.rs  router.rs  sync.rs  synchronizer.rs  terminal_helpers.rs  web.rs
rust/src/terminal/graph/: agent.rs  api.rs  events.rs  mod.rs  models.rs  providers.rs  sprotty_adapter.rs  tests.rs  workflow.rs
rust/src/utils/: error.rs  mod.rs
rust/src/workflow/: engine.rs  mod.rs  signal.rs  state.rs  task.rs
rust/static/: graph_visualization.html  standalone_graph.html
rust/tests/: agent_tests.rs  alerting_tests.rs  connection_tests.rs  executor_tests.rs  message_tests.rs  mod.rs  protocol_tests.rs
rust/tests/terminal/: console_test.rs  integration_test.rs  mod.rs  performance_test.rs  websocket_test.rs
src/mcp/: connection.rs  protocol.rs
src/mcp/transport/: http.rs  server.rs  websocket.rs
src/terminal/: mod.rs  router.rs  web.rs
src/terminal/graph/: events.rs  mod.rs  models.rs  providers.rs
tests/: message_tests.rs
tests/terminal/: console_test.rs  integration_test.rs
visualization/: architecture.rst  diagrams.puml  requirements.rst
