[package]
name = "mcp-agent"
version = "0.1.0"
edition = "2024"
authors = ["MCP Team <team@mcp-agent.org>"]
description = "Agent implementation for the Model Context Protocol"
license = "MIT"
repository = "https://github.com/yourusername/mcp-agent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
async-trait = "0.1.77"
futures = "0.3.30"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.56"
log = "0.4.20"
env_logger = "0.9.3"
bytes = "1.5.0"
validator = { version = "0.16.1", features = ["derive"] }
chrono = { version = "0.4.33", features = ["serde"] }
serde_yaml = "0.9.31"
serde_bytes = "0.11.14"
bytemuck = { version = "1.15.0", features = ["derive"] }
rustyline = "9.1.2"
criterion = "0.5.1"
proptest = "1.4.0"
rand = "0.8.5"
tokio-test = "0.4.3"
colored = "2.1.0"
reqwest = { version = "0.11.24", features = ["json"] }
anyhow = "1.0.80"

# Added OpenTelemetry dependencies
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Add feature flags for OpenTelemetry
[features]
default = ["server_registry"]
test-util = ["tokio/test-util"]
server_registry = []
telemetry-jaeger = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-jaeger", "tracing-opentelemetry"]
telemetry-otlp = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tracing-opentelemetry"]
ollama = ["reqwest"]

# Optional dependencies
[dependencies.opentelemetry]
version = "0.21.0"
features = ["trace", "metrics"]
optional = true

[dependencies.opentelemetry_sdk]
version = "0.21.2"
features = ["trace", "rt-tokio"]
optional = true

[dependencies.opentelemetry-jaeger]
version = "0.20.0"
optional = true

[dependencies.opentelemetry-otlp]
version = "0.14.0"
features = ["trace", "metrics", "http-proto"]
optional = true

[dependencies.tracing-opentelemetry]
version = "0.22.0"
optional = true

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.3"
criterion = "0.5"

[[example]]
name = "simple_client"
path = "../examples/simple_mcp_example/simple_client.rs"

[[example]]
name = "parallel_workflow"
path = "examples/parallel_workflow/main.rs"

[[example]]
name = "orchestrator_workflow"
path = "examples/orchestrator_workflow/main.rs"

[[example]]
name = "router_workflow"
path = "examples/router_workflow/main.rs"

[[example]]
name = "pipeline_workflow"
path = "examples/pipeline_workflow/main.rs"

[[example]]
name = "retry_workflow"
path = "examples/retry_workflow/main.rs"

[[example]]
name = "conditional_workflow"
path = "examples/conditional_workflow/main.rs"
