[package]
name = "graph-visualization"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
hyper = { version = "1.0", features = ["server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
futures = "0.3" 